--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,1 +1,7 @@
-badges: { first_quest: { name: "First quest Badge", filename: "first-quest.png"} }
+badges: { 
+					first_quest: { name: "First quest", filename: "first-quest.png"},
+					win_quest: { name: "First won quest", filename: "win-quest.png"},
+					first_entry: { name: "First quest entry", filename: "first-participate.png"},
+					ten_entries: { name: "Ten quest entries", filename: "ten-participate.png"},
+					ten_votes: { name: "Ten votes", filename: "ten-votes.png"},
+        }
